tasksel (1.45) UNRELASED; urgency=low

  * Joey Hess
    - Add myspell-fr-gut to french task.
  * Updated translations:
    - Rene Engelhard
      - Updated and unfuzzied German translations.
    - Håvard Korsvoll
      - Updated and added Norwegian nynorsk translations (nn.po)

 -- Joey Hess <joeyh@debian.org>  Mon, 23 Feb 2004 01:35:45 -0500

tasksel (1.44) unstable; urgency=low

  * Joey Hess
    - Change from lynx to w3m in unix-server, as the priorities have changed.
    - Remove abiword-gnome from the desktop task, since it is pulled in by
      the gnome metapackage.
    - Kde is fixed, uncomment.
    - Added "pl" to LANGS_DESC in Makefile.
    - Hack up \n's in po/bg.po to satisfy msgfmt.
  * Jordi Mallach
    - Add myspell-ca to catalan.
    - Set myself as Maintainer: for catalan.
  * Denis Barbier
    - Convert this changelog to UTF-8.
  * Ognyan Kulev
    - Mention LANGS and LANGS_DESC in README.translators.
  * GOTO Masanori
    - Upate Japanese task based on user feedback:
        (1) removing unexisted packages (ttf-xtt-wadalab-gothic,
            ttf-xtt-watanabe-mincho)
        (2) adding useful Japanese fonts (xfonts-ayu, xfonts-kaname,
            xfonts-mplus, ttf-kochi-gothic, ttf-kochi-mincho)
        (3) add mozilla-locale-ja.
      Closes: #229923

  * Updated translations:
    - Konstantinos Margaritis
      - Update tasks/po/el.po.  Closes: #230305
    - Jordi Mallach
      - Update Catalan translations (tasks/po/ca.po and po/ca.po).
    - Miguel Figueiredo
      - Add portuguese translations (tasks/po/pt.po and po/pt.po)
      - Add "pt" to LANGS and LANGS_DESC in Makefile.
    - Carlos Z.F. Liu
      - Update Simplified Chinese translations (tasks/po/zh_CN.po)
    - André Luís Lopes
      - Updated Brazilian Portuguese translation (tasks/po/pt_BR.po).
    - Kęstutis Biliūnas
      - Initial Lithuanian translation (tasks/po/lt.po and po/lt.po).
    - Safir Secerovic
      - Initial Bosnian translation (po/bs.po and tasks/po/bs.po).